# harmonic-oscillator-pinn

./: Harmonic oscillator PINN.ipynb  README.md  poetry.toml  pyproject.toml  test.py
